--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 				</div>
 			</div>
 		</div>
-
+	</div>
 	<div class="container">
 		<!-- Header chuyên nghiệp -->
 		<header class="header">
@@ -167,7 +167,7 @@
 					<i class="fas fa-user-circle"></i>
 				</div>
 				<div class="customer-details">
-					<h2 id="customerName" class="customer-name"></h2>
+					<h2 id="customerNameLabel" class="customer-name"></h2>
 					<p class="customer-id">
 						<i class="fas fa-id-badge"></i>
 						<span id="customerIdText"></span>
