--- a/admin.html
+++ b/admin.html
@@ -938,7 +938,9 @@
 		<!-- Tab Content: Yêu cầu gia hạn -->
 		<div id="renewals-tab" class="tab-content">
 			<div class="data-table">
-				<div class="table-header"><h2 class="table-title">Yêu cầu gia hạn</h2></div>
+				<div class="table-header"><h2 class="table-title">Yêu cầu gia hạn</h2>
+					<div class="table-actions"><button class="btn btn-primary" onclick="refreshRenewalsUI()"><i class="fas fa-sync-alt"></i> Làm mới</button></div>
+				</div>
 				<div class="table-content">
 					<table>
 						<thead>
