--- a/admin.html
+++ b/admin.html
@@ -8,6 +8,7 @@
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="assets/favicon.svg" />
+	<script src="assets/remote-store.js"></script>
 	<style>
 		/* Admin specific styles */
 		.admin-container {
