--- a/login.html
+++ b/login.html
@@ -311,6 +311,8 @@
 		})();
 	</script>
 	<script src="assets/auth.js"></script>
+	<script src="assets/remote-store.js"></script>
+	<script src="assets/sync-manager.js"></script>
 	<script src="assets/security.js"></script>
 	<script>
 		// Hệ thống xác thực hoàn toàn ẩn mật khẩu
@@ -413,6 +415,15 @@
 				const result = hiddenAuth.verify(password, twoFactorCode);
 				
 				if (result.success) {
+					// Auto sync from remote on successful login
+					if (window.syncManager) {
+						try {
+							await window.syncManager.performAutoSync();
+						} catch (syncError) {
+							console.warn('Auto sync failed on login:', syncError);
+						}
+					}
+					
 					// Lưu session
 					localStorage.setItem("admin_logged_in", "true");
 					localStorage.setItem("admin_login_time", Date.now().toString());
