fix: Add COOP headers and JSONP test for CORS issues

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 		// Cấu hình trực tiếp trong HTML để tránh lỗi MIME type
 		window.APP_CONFIG = {
 			// Google OAuth
-			GOOGLE_CLIENT_ID: '518155976409-66vkttabqhsaqc5ph72p91er15a556au.apps.googleusercontent.com',
+			GOOGLE_CLIENT_ID: 'YOUR_NEW_CLIENT_ID.apps.googleusercontent.com',
 			ADMIN_GOOGLE_EMAIL: 'giang10012004@gmail.com',
 			
 			// Google Sheets (Excel online)
